# fusionauth-quickstart-rust-actix-web

./: .gitignore  README.md  article.md  docker-compose.yml
complete-application/: .env  Cargo.toml
complete-application/src/: auth.rs  main.rs
complete-application/templates/: change.html
kickstart/: kickstart.json
your-application/: .env  Cargo.toml
your-application/src/: auth.rs  login.rs  main.rs
your-application/static/: index.html
your-application/templates/: account.html  change.html  index.html
